--- a/index.html
+++ b/index.html
@@ -14,11 +14,16 @@
 </head>
 
 <body>
-<div class="container">
-    <div class="row">
-        <button class="btn btn-primary" onclick="tableAdd();">Generate</button>
+    <div class="container">
+        <div class="row">
+            <button class="btn btn-primary" onclick="tableAdd();">Generate</button>
+            <form name="colorForm" id="colorFormID" onsubmit="ColorRoom();">
+                <input type="number" name="roomNo" id="roomNo">
+                <input type="text" name="colorCode" id="colorCode">
+                <input type="submit" value="Color" class="btn btn-warning">
+            </form>
+        </div>
     </div>
-</div>
     <div class="container-fluid">
         <div class="row" id="table-container">
             <!-- <div class="col-6 px-5 py-5">
@@ -175,6 +180,8 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.min.js"
         integrity="sha384-Atwg2Pkwv9vp0ygtn1JAojH0nYbwNJLPhwyoVbhoPwBhjQPR5VtM2+xf0Uwh9KtT"
         crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"
+        integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
     <script src="script.js"></script>
 </body>
 
