--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
+        <script src="algo.js"></script>
 
     <title>Hello, world!</title>
 </head>
@@ -16,7 +17,7 @@
 <body>
     <div class="container">
         <div class="row">
-            <button class="btn btn-primary" onclick="tableAdd();">Generate</button>
+            <button class="btn btn-primary" onclick="stepBatch();">Generate</button>
             <form name="colorForm" id="colorFormID" onsubmit="ColorRoom();">
                 <input type="number" name="roomNo" id="roomNo">
                 <input type="text" name="colorCode" id="colorCode">
