--- a/index.html
+++ b/index.html
@@ -15,9 +15,13 @@
 </head>
 
 <body>
+    <div>
+
+    </div>
     <div class="container">
         <div class="row">
             <button class="btn btn-primary" onclick="stepBatch();">Generate</button>
+
             <form name="colorForm" id="colorFormID" onsubmit="ColorRoom();">
                 <input type="number" name="roomNo" id="roomNo">
                 <input type="text" name="colorCode" id="colorCode">
