--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
                 <input type="number" name="roomNo" id="roomNo">
                 <input type="text" name="colorCode" id="colorCode">
                 <input type="submit" value="Color" class="btn btn-warning">
+                <div id="totalStudents">123</div>
             </form>
         </div>
     </div>
